--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
   "name": "complex-app",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "watch": "nodemon db",
+    "watch": "nodemon db --ignore frontend-js --ignore public/ & webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/preset-env": "^7.8.2",
-    "@sendgrid/mail": "^6.4.0",
-    "axios": "^0.19.1",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^3.2.0",
-    "cors": "^2.8.5",
-    "csurf": "^1.10.0",
-    "dompurify": "^2.0.7",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "jsonwebtoken": "^8.5.1",
-    "marked": "^0.8.0",
+    "connect-mongo": "^3.0.0",
+    "dompurify": "^2.0.8",
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "marked": "^0.8.2",
     "md5": "^2.2.1",
-    "mongodb": "^3.5.3",
-    "nodemon": "^2.0.2",
-    "sanitize-html": "^1.20.1",
-    "socket.io": "^2.3.0",
-    "validator": "^12.2.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
-  }
+    "mongodb": "^3.2.6",
+    "nodemon": "^1.19.0",
+    "sanitize-html": "^1.22.1",
+    "validator": "^11.0.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tomwrankmore/complex-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tomwrankmore/complex-app/issues"
+  },
+  "homepage": "https://github.com/tomwrankmore/complex-app#readme",
+  "description": ""
 }
